postcss/testData/inspections/annotator/nestedRulesetWithNestWithoutAmpersand.pcss
h1 {
    <error descr="Nested ruleset selector should contain '&'">@nest h2</error> {
        color: white;
    }
}